Bug 1929757 - Do not wait for a content response for a hold gesture. r=hiro

A content response will never arrive because the MAYSTART event
has a zero delta and so it not dispatched to content.

Differential Revision: https://phabricator.services.mozilla.com/D228277