gfx/layers/apz/src/InputBlockState.h
@@ -371,6 +371,14 @@ class PanGestureBlockState : public CancelableBlockState {
   }
   Maybe<LayersId> WheelTransactionLayersId() const override;
 
+  void ConfirmForHoldGesture() {
+    // Hold gestures get their own input block, but do not generate
+    // any events that get to web content (because the PANGESTURE_MAYSTART
+    // event has a zero delta). As a result, do not wait for a content
+    // response for them because it will never arrive.
+    mTargetConfirmed = InputBlockState::TargetConfirmationState::eConfirmed;
+  }
+
  private:
   bool mInterrupted;
   bool mWaitingForContentResponse;
